# VoiceChat_UDP

./: AudioGawd.cpp  AudioGawd.h  CMakeLists.txt  RingBuffer.h  client.h  client.hpp  constants.h  constants.hpp  helpers.cpp  helpers.hpp  main.cpp  player.cpp  player.h  player.hpp  recorder.cpp  recorder.h  recorder.hpp  ringbuffer.hpp  server.h  server.hpp  servertest.cpp  sharedmemory.h  sharedmemory.hpp  vcpkg.json
